Added Chore list/create/update/delete

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,7 +21,9 @@
                 <ion-item nav-clear menu-close href="#/app/homes">
                     Homes
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/"></ion-item>
+                <ion-item nav-clear menu-close href="#/app/chores" ng-if="homeSelected()">
+                    Chores
+                </ion-item>
                 <ion-item nav-clear menu-close href="#/app/search">
                     Search
                 </ion-item>
