--- a/www/templates/homes.html
+++ b/www/templates/homes.html
@@ -3,13 +3,19 @@
         <ion-list>
             <ion-item class="text-center item-icon-left" ng-repeat="home in homes" ng-click="selectHome(home)">
                 <i class="icon ion-key" ng-if="home.is_manager"></i>
-                <span ng-class="{'balanced': isSelected(home)}">{{home.title}} ({{home.members.length}} members)</span>
+                <span ng-class="{'balanced': isSelected(home)}">{{home.title}} ({{home.members.length}})</span>
+                <ion-option-button
+                        class="button-positive"
+                        ng-click="$state.transitionTo('app.home_update', {'homeId': home.id})"
+                        ng-if="home.is_manager">
+                    Edit
+                </ion-option-button>
                 <ion-option-button class="button-assertive" ng-click="confirmDeleteHome(home)">
                     Delete
                 </ion-option-button>
             </ion-item>
             <ion-item class="text-center" href="#/app/home/create">
-                <span class="positive">Add New Home</span>
+                <span class="positive">New Home</span>
             </ion-item>
         </ion-list>
     </ion-content>
