--- a/www/templates/chores.html
+++ b/www/templates/chores.html
@@ -1,4 +1,12 @@
 <ion-view view-title="Chores" cache-view="false">
+    <ion-nav-buttons side="right">
+        <label class="toggle">
+            <input type="checkbox" ng-click="doToggle()">
+                <div class="track">
+                    <div class="handle"></div>
+                </div>
+        </label>
+    </ion-nav-buttons>
     <ion-content>
         <div class="list card" ng-repeat="chore in chores" href="#/app/chores/{{chore.id}}">
             <div class="item item-body">
@@ -6,7 +14,11 @@
                 <p>{{chore.description}}</p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
-                <div class="tab-item balanced">
+                <div class="tab-item energized" ng-click="uncompleteChore(chore)" ng-if="chore.completed">
+                    <i class="icon ion-ios-close-empty"></i>
+                    Uncomplete
+                </div>
+                <div class="tab-item balanced" ng-click="completeChore(chore)" ng-if="!chore.completed">
                     <i class="icon ion-ios-checkmark-empty"></i>
                     Complete
                 </div>
@@ -14,17 +26,17 @@
                     <i class="icon ion-ios-compose-outline"></i>
                     Edit
                 </div>
-                <div class="tab-item">
-                    <i class="icon ion-ios-personadd-outline"></i>
-                    Assign
-                </div>
+                <!--<div class="tab-item">-->
+                    <!--<i class="icon ion-ios-personadd-outline"></i>-->
+                    <!--Assign-->
+                <!--</div>-->
                 <div class="tab-item assertive" ng-click="confirmDeleteChore(chore)">
-                    <i class="icon ion-ios-close-empty"></i>
+                    <i class="icon ion-ios-trash-outline"></i>
                     Delete
                 </div>
             </div>
         </div>
-        <div class="card" ng-click="$state.transitionTo('app.chore_create')">
+        <div class="card" ng-click="$state.transitionTo('app.chore_create')" ng-if="!toggle">
             <div class="item item-text-wrap text-center">
                 <span class="positive">Add Chore</span>
             </div>
