--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,13 +8,21 @@
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
                 </button>
             </ion-nav-buttons>
+            <ion-nav-buttons side="right" ng-if="showToggle()">
+                <label class="toggle">
+                    <input type="checkbox" ng-click="doToggle()">
+                        <div class="track">
+                            <div class="handle"></div>
+                        </div>
+                </label>
+            </ion-nav-buttons>
         </ion-nav-bar>
         <ion-nav-view name="menuContent"></ion-nav-view>
     </ion-side-menu-content>
 
     <ion-side-menu side="left">
         <ion-header-bar class="bar-stable">
-            <h1 class="title">Left</h1>
+            <h1 class="title">Homeboard</h1>
         </ion-header-bar>
         <ion-content>
             <ion-list>
