--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,5 @@
-<ion-view view-title="Login">
+<ion-view view-title="Homeboard">
+    <ion-nav-bar class="bar-dark"></ion-nav-bar>
     <ion-content>
         <form role="form" ng-submit="login(loginForm)" name="loginForm" novalidate>
             <div class="list">
